Added Gitlab Runner service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 ---
 gitlab:
-  image: 'gitlab/gitlab-ce:9.1.0-ce.0'
+  image: 'gitlab/gitlab-ce:latest'
   restart: always
   hostname: 'gitlab.example.com'
   links:
@@ -26,11 +26,10 @@ gitlab:
     - "30080:30080"
     # the mapped port must match ssh_port specified above.
     - "30022:22"
-# the following are hints on what volumes to mount if you want to persist data
-#  volumes:
-#    - data/gitlab/config:/etc/gitlab:rw
-#    - data/gitlab/logs:/var/log/gitlab:rw
-#    - data/gitlab/data:/var/opt/gitlab:rw
+  volumes:
+    - ./data/gitlab/config:/etc/gitlab:rw
+    - ./data/gitlab/logs:/var/log/gitlab:rw
+    - ./data/gitlab/data:/var/opt/gitlab:rw
 
 postgresql:
   restart: always
@@ -39,10 +38,17 @@ postgresql:
     - POSTGRES_USER=gitlab
     - POSTGRES_PASSWORD=gitlab
     - POSTGRES_DB=gitlabhq_production
-# the following are hints on what volumes to mount if you want to persist data
-#  volumes:
-#    - data/postgresql:/var/lib/postgresql:rw
+  volumes:
+    - ./data/postgresql:/var/lib/postgresql:rw
 
 redis:
   restart: always
   image: redis:3.0.7-alpine
+
+gitlab-runner:
+  container_name: gitlab-runner
+  image: gitlab/gitlab-runner:latest
+  restart: always
+  volumes:
+    - /srv/gitlab-runner/config:/etc/gitlab-runner
+    - /var/run/docker.sock:/var/run/docker.sock
